# document-refinery

./: .gitignore  CONTRIBUTING.md  OWNER_ACTION_ITEMS.md  README.md  SECURITY.md  document_refinery_handoff.md  pyproject.toml
.codex/environments/: environment.toml
.github/workflows/: ci.yml
docs/: additional-real-world-collateral-optimizer-references.md  phase-0-1-completion.md  public-corpus-validation.md  real-world-collateral-schedule-examples.md  roadmap.md  semantic-schema-candidates.md  test-corpus-downloads.md  toolchain-evaluation.md
docs/adr/: 0001-phase-1-foundation.md  0002-local-vertical-slice.md  0003-hybrid-semantic-layer.md
docs/workflows/: local-schema-catalog.md  review-and-gold.md
example_schedules/: README.md  manifest.json
examples/: sample_eligibility_schedule.txt
examples/collateral_rule_corpus/: 01-sec-isda-csa-1994.txt  02-isda-template-schedule.txt  03-isda-vm-csa-2016.txt  04-isda-operational-eligibility.txt  05-dealer-csa-rule.txt  README.md  ground_truth.json
examples/golden_corpus/: 01-csa-vm-us-megabank.txt  02-csa-vm-eur.txt  03-csa-im-simm.txt  04-triparty-repo-gmra.txt  05-gmsla-securities-lending.txt  06-gilt-gbp.txt  07-jpy-jgb.txt  08-em-sovereign.txt  09-cash-mmf.txt  10-multiccy-triparty.txt  README.md  ground_truth.json
examples/layout_benchmark/: README.md  manifest.json
models/: llama.txt
models/loan_recall_prediction/: README.md
models/loan_recall_prediction/configs/: base.yaml
models/loan_recall_prediction/docs/: architecture.md  data-dictionary.md  field-requirements.md  model-card.md  product-requirements.md  runbook.md
models/loan_recall_prediction/tests/: conftest.py  test_loan_recall_prediction.py
scripts/: add_corpus_document.py  build_golden_corpus.py
sql/: README.md
src/document_refinery/: __init__.py  cli.py
tests/: conftest.py  test_accuracy.py  test_chat_completions.py  test_cli_semantic.py  test_constraint_set.py  test_corpus.py  test_correction_memory.py  test_corrections.py  test_dashboard.py  test_delta_limit_store.py  test_delta_store.py  test_distiller.py  test_eligibility_agents.py  test_layout_and_provider.py  test_limit_consistency.py  test_limit_pipeline.py  test_limit_promotion.py  test_local_semantic.py  test_margin_promotion.py  test_models.py  test_phase_zero.py  test_pipeline.py  test_promotion.py  test_public_schedules.py  test_quality.py  test_review_timing.py  test_semantic.py
(+66 files in other folders)
