[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "document-refinery"
version = "0.1.0"
description = "Auditable document extraction into bitemporal, quant-ready records"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Joshua Lutkemuller" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.7",
]

[project.scripts]
document-refinery = "document_refinery.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/document_refinery"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

