[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "document-refinery"
version = "0.1.0"
description = "Auditable document extraction into bitemporal, quant-ready records"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Joshua Lutkemuller" }]
dependencies = ["pypdf>=5.0"]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.7",
]
pdf = ["pdfplumber>=0.11"]
ocr = ["pytesseract>=0.3.10", "pypdfium2>=4.0"]
delta = ["deltalake>=1.0", "pyarrow>=15"]

[project.scripts]
document-refinery = "document_refinery.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/document_refinery"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Data-heavy corpus generator: long structured-data rows are clearer unwrapped.
"scripts/build_golden_corpus.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

# Third-party libraries without type stubs (optional/extra dependencies).
[[tool.mypy.overrides]]
module = [
    "pypdf",
    "pypdf.*",
    "deltalake",
    "deltalake.*",
    "pyarrow",
    "pyarrow.*",
    "pytesseract",
    "pytesseract.*",
    "pypdfium2",
    "pypdfium2.*",
]
ignore_missing_imports = true
